# TCouple

Arduino/: Arduino_ESP32_path.txt  ESP_TOOL.txt  Fix_MD5_problem.txt
Backup/: Animation.h  Animation10x.h  Animation_Readme.txt  TFT_eSPI_DriverDefines.h  TFT_eSPI_DriverSelect.cpp  lv_conf.h
Backup/Adafruit_MAX31855/: AIDE_output  Adafruit_MAX31855.h
Backup/Adafruit_MAX31855_Beck/: Adafruit_MAX31855_Beck.cpp  Adafruit_MAX31855_Beck.h
Backup/B32_ESP-NOW_WiFi/: B32_ESP-NOW_WiFi.ino
Backup/B32_TCoupleDisplay - Copy/: B32_TCoupleDisplay.ino
Backup/B32_TCoupleLib/: B32_TCoupleLib.cpp  B32_TCoupleLib.h
Backup/B32_TCoupleLib - Copy/: B32_TCoupleLib.cpp  B32_TCoupleLib.h
Backup/B32_TCoupleRemote/: B32_TCoupleRemote.ino
Backup/B32_TCoupleRemote - Copy/: B32_TCoupleRemote.ino
Backup/B32_TFTPrintTest/: B32_TFTPrintTest.ino
Backup/B32_TTGOWeatherStation/: B32_TTGOWeatherStation.cpp
Backup/B32_TTGOWeatherStation3withJSON/: B32_TTGOWeatherStation.ino  Orbitron_Medium_20.h
Backup/BeckE32_OTALib/: BeckE32_OTALib.cpp  BeckE32_OTALib.h
Backup/Expressif-IDE_Workspaces/: Touch.cpp
Backup/TFT_eSPI_OLD/: TFT_eSPI.cpp  User_Setup.h
Espressif_IDF/IDF_Projects/B32_TTGOWeatherStation/: Animation.h  B32_TTGOWeatherStation.cpp  B32_TTGOWeatherStation_OLD.cpp  CMakeLists.txt  Tasks.cpp
Expressif-IDE_Workspaces/FirstTask_120523b/: .cproject  .project
Expressif-IDE_Workspaces/First_120523a/: .cproject
IDF_Components/IDF_Display/: IDF_Display.c
Misc/: blink_analogread_ino.ino
SquareLine/: SquarelineSetup.cpp
Workspaces/: .cproject  .project
(+514 files in other folders)
